--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -37,6 +37,9 @@ dependencies:
   flutter_login: ^2.0.0-nullsafety.0
   dio: ^4.0.0
   provider: ^5.0.0
+  liquid_pull_to_refresh: ^3.0.0
+  flutter_spinkit: ^5.0.0
+  after_layout: ^1.1.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
