--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -40,6 +40,8 @@ dependencies:
   liquid_pull_to_refresh: ^3.0.0
   flutter_spinkit: ^5.0.0
   after_layout: ^1.1.0
+  adaptive_dialog: ^0.10.0+5
+  select_dialog: ^2.0.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
