--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -42,6 +42,8 @@ dependencies:
   after_layout: ^1.1.0
   adaptive_dialog: ^0.10.0+5
   select_dialog: ^2.0.0
+  form_builder_fields: ^7.0.0-alpha.2
+  intl: ^0.17.0
 dev_dependencies:
   flutter_test:
     sdk: flutter
