--- a/pubspec.yaml
+++ b/pubspec.yaml
@@ -45,6 +45,7 @@ dependencies:
   flutter_form_builder: ^6.0.1
   rounded_loading_button: ^2.0.4
   intl: ^0.17.0
+  url_launcher: ^6.0.4
 dev_dependencies:
   flutter_test:
     sdk: flutter
